[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Péter Garamvölgyi <peter.garamvolgyi@hotmail.com>"]
edition = "2018"

[[bin]]
name = "day-01"
path = "day-01/main.rs"

[[bin]]
name = "day-02"
path = "day-02/main.rs"

[[bin]]
name = "day-03"
path = "day-03/main.rs"

[[bin]]
name = "day-04"
path = "day-04/main.rs"

[[bin]]
name = "day-05"
path = "day-05/main.rs"

[[bin]]
name = "day-06"
path = "day-06/main.rs"

[[bin]]
name = "day-07"
path = "day-07/main.rs"

[dependencies]
maplit = "1.0.2"
text_io = "0.1.8"
regex = "1.4.2"